<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:padding="20dp"

    >

    <TextView
        android:id="@+id/qst1TV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/qst1"
        android:textSize="20sp" />

    <CheckBox
        android:id="@+id/CB1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/Cb1"
        android:textSize="20sp" />

    <CheckBox
        android:id="@+id/CB2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/Cb2"
        android:textSize="20sp" />

    <CheckBox
        android:id="@+id/CB3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/Cb3"
        android:textSize="20sp" />

    <CheckBox
        android:id="@+id/CB4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/Cb4"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/qst2TV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/qst2"
        android:textSize="20sp" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp">

        <RadioButton
            android:id="@+id/ouiRB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Rb1"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/nonRB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Rb2"
            android:textSize="20sp" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="20dp">

        <Button
            android:id="@+id/quitBn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="0.5"
            android:text="@string/bn1" />

        <Button
            android:id="@+id/nextBn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="0.5"
            android:text="@string/bn2" />
    </LinearLayout>
</LinearLayout>